[gd_scene load_steps=5 format=3 uid="uid://cerd3su42dn8d"]

[ext_resource type="PackedScene" uid="uid://bjl8jxuslmq7f" path="res://scenes/player.tscn" id="1_bwj20"]
[ext_resource type="Script" path="res://scripts/gameManager.gd" id="1_kvnfe"]
[ext_resource type="PackedScene" uid="uid://bkmpk20w82py7" path="res://scenes/enemy.tscn" id="2_g5nh4"]

[sub_resource type="Curve2D" id="Curve2D_mn7ca"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 25, 27, 0, 0, 0, 0, 1333, 27, 0, 0, 0, 0, 1341, 737, 0, 0, 0, 0, 21, 733, 0, 0, 0, 0, 25, 27)
}
point_count = 5

[node name="world" type="Node2D"]

[node name="gameManager" type="Node2D" parent="."]
script = ExtResource("1_kvnfe")
enemy_scene = ExtResource("2_g5nh4")

[node name="spawn_timer" type="Timer" parent="gameManager"]
wait_time = 4.0
autostart = true

[node name="player" parent="." instance=ExtResource("1_bwj20")]
position = Vector2(585, 313)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 324)

[node name="enemy_spawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_mn7ca")

[node name="enemy_spawn_point" type="PathFollow2D" parent="enemy_spawn"]
unique_name_in_owner = true
position = Vector2(25, 27)

[connection signal="timeout" from="gameManager/spawn_timer" to="gameManager" method="_on_spawn_timer_timeout"]
